--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% include ../parts/header %>
 		<div class="row">
 			<div class="col-md-3">
-				<p class="lead">Yelp Camp</p>
+				<p class="lead"><%=title%></p>
 				<ul class="list-group">
 					<li class="list-group-item active">Category 1</li>
 					<li class="list-group-item">Category 2</li>
