--- a/public/style.css
+++ b/public/style.css
@@ -1,57 +1,30 @@
+body {
+  overflow-y: scroll;
+}
+
+h4, h5, h6 {
+  margin: 0;
+  line-height: 2;
+}
+
 textarea {
   resize: vertical;
 }
 
-.flex-wrap {
-	display: flex;
-	flex-wrap: wrap;
+.campground a {
+  text-decoration: none;
+  
+}
+.campground{
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
+  transition: transform 0.2s ease-out;
+}
+.campground:hover {
+  transform: scale(0.99);
+  box-shadow: 0 .45rem 1rem rgba(0,0,0,.15);
 }
 
-.form {
-	width: 30%;
-	margin: 30px auto;
-}
-
-.jumbotron {
-	text-align: center;
-}
-
-.container {
-	margin-bottom: 50px;
-}
-
-.segment:nth-last-of-type(1n+2) {
-	margin-bottom: 10px
-}
-
-.segment {
-	padding: 15px;
-
-	border-radius: 8px 8px 8px 8px;
-	-moz-border-radius: 8px 8px 8px 8px;
-	-webkit-border-radius: 8px 8px 8px 8px;
-
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-}
- 
-.img-full {
-	width: 100%;
-}
-
-.thumbnail {
-	padding: 0;
-}
-
-.margin-top {
-	margin-top: 15px;
-}
-
-.margin-bottom {
-	margin-bottom: 15px;
-}
-
-.inline {
-	display: inline-block;
+.campground:active {
+  transform: scale(0.97);
+  box-shadow: 0 .3rem 1rem rgba(0,0,0,.15);
 }
