--- a/views/campgrounds/gallery.ejs
+++ b/views/campgrounds/gallery.ejs
@@ -1,23 +1,24 @@
 <% include ../parts/header %>
-		<header class="jumbotron">
+	<section class="container">
+		<header class="jumbotron text-center">
 			<h1>Campgrounds</h1>
-			<p>View our hand-pciked campgrounds from all over the world</p>
+			<p>View our hand-picked campgrounds from all over the world</p>
 			<p>
 				<a class="btn btn-primary btn-lg" href="/camps/new">Add camp</a>
 			</p>
 		</header>
 
-		<div class="row text-center flex-wrap"> 
+		<main class="row text-center"> 
 			<% camps.forEach(function(camp) { %>
-				<div class="col-md-3 col-sm-6">
-					<a href="/camps/<%=camp._id%>" class="thumbnail">
-						<div class="caption">
-							<h4><%= camp.name %></h4>
-						</div> <!-- caption -->
-						<img src="<%= camp.image %>">
-					</a> <!-- thumbnail -->
+				<div class="col-lg-3 col-md-6">
+					<article class=" mb-3 campground">
+						<a href="/camps/<%=camp._id%>" class="text-secondary h4">
+							<%= camp.name %>
+							<img class="card-img-bottom" src="<%= camp.image %>">
+						</a> 
+					</article>
 				</div> <!-- col-md-3 col-sm-6 -->
 			<% }) %>
-
-		</div> <!-- row -->
+		</main> <!-- row -->
+	</section>
 <% include ../parts/footer %>
