--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,27 +1,28 @@
 <% include ../parts/header %>
-	<h1>Add new campground</h1>
+<section class="container py-4">
+	<h1 class="text-center">Add new campground</h1>
+	<div class="row">
+		<div class="col-lg-8 offset-2">
+			<form action="/camps" method="POST">
+				<div class="form-group">
+					<label for="title">Campground name: </label>
+					<input class="form-control" type="text" id="title" name="camp[name]">
+				</div>
 
-	<div class="row form">
-		<form action="/camps" method="POST">
-			<div class="form-group">
-				<label for="title">Campground name: </label>
-				<input class="form-control" type="text" id="title" name="camp[name]">
-			</div>
+				<div class="form-group">
+					<label for="image">Image URL: </label>
+					<input class="form-control" type="text" id="image" name="camp[image]">
+				</div>
 
-			<div class="form-group">
-				<label for="image">Image URL: </label>
-				<input class="form-control" type="text" id="image" name="camp[image]">
-			</div>
+				<div class="form-group">
+					<label for="info">Description: </label>
+					<textarea class="form-control" id="info" name="camp[info]" rows="10"></textarea>
+				</div>
 
-			<div class="form-group">
-				<label for="info">Description: </label>
-				<textarea class="form-control" id="info" name="camp[info]" rows="10"></textarea>
-			</div>
-
-			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
-			</div>
-		</form>
-		<a href="/camps">Go back</a>
+				<button class="btn btn-primary" type="submit">Submit</button>
+				<a class="btn btn-outline-secondary"href="/camps">Go back</a>
+			</form>
+		</div>
 	</div> <!-- row -->
+</section>
 <% include ../parts/footer %>
