--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,18 +1,19 @@
 <% include ../parts/header %>
-	<h1>Edit</h1>
+<section class="container py-4">
+	<h1 class="text-center">Editing post</h1>
 
-	<div class="row form">
-		<form action="/camps/<%=camp_id%>/comment/<%=comment._id%>?_method=PUT" method="POST">
-			<div class="form-group">
-				<label for="content">Comment: </label>
-				<textarea class="form-control" id="content" 
-					name="text" rows="10"><%=comment.text%></textarea>
-			</div>
+	<div class="row">
+		<div class="col-lg-8 offset-2">
+			<form action="/camps/<%=camp_id%>/comment/<%=comment._id%>?_method=PUT" method="POST">
+				<div class="form-group">
+					<textarea class="form-control" id="content" name="text" rows="10"><%=comment.text%></textarea>
+				</div>
 
-			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
-			</div>
-		</form>
-		<a href="/camps/<%=camp_id%>">Go back</a>
+				<button class="btn btn-primary" type="submit">Save</button>
+				<a class="btn btn-outline-secondary" href="/camps/<%=camp_id%>">Back</a>
+			</form>
+			
+		</div>
 	</div> <!-- row -->
+</section>
 <% include ../parts/footer %>
