--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,17 +1,19 @@
 <% include ../parts/header %>
-	<h1>Add new comment</h1>
+<section class="container py-4">
+	<h1 class="text-center">New post</h1>
 
-	<div class="row form">
-		<form action="/camps/<%=camp._id%>/comment/" method="POST">
-			<div class="form-group">
-				<label for="content">Comment: </label>
-				<textarea class="form-control" id="content" name="text" rows="10"></textarea>
-			</div>
+	<div class="row">
+		<div class="col-lg-8 offset-2">
+			<form action="/camps/<%=camp._id%>/comment/" method="POST">
+				<div class="form-group">
+					<textarea class="form-control" id="content" name="text" rows="10"></textarea>
+				</div>
 
-			<div class="form-group">
-				<button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
-			</div>
-		</form>
-		<a href="/camps/<%=camp._id%>">Go back</a>
+				<button class="btn btn-primary" type="submit">Submit</button>
+				<a class="btn btn-outline-secondary" href="/camps/<%=camp._id%>">Go back</a>
+			</form>
+			
+		</div>
 	</div> <!-- row -->
+</section>
 <% include ../parts/footer %>
