--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -1,43 +1,34 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title><%=title%></title>
-		<script
-		  src="https://code.jquery.com/jquery-3.3.1.min.js"
-		  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-		  crossorigin="anonymous"></script>
-		<script 
-			src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
-			integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
-			crossorigin="anonymous"></script>
-		<link 
-			href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-			rel="stylesheet" 
-			integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-			crossorigin="anonymous">
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+			<div class="container">
 				<a class="navbar-brand" href="/">YelpCamp</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<% if (!session) { %>
-						<li><a href="/login">Login</a></li>
-						<li><a href="/register">Sign up</a></li>
-					<% } else { %>
-						<li class="navbar-text"><%=session.username%>:</li>
-						<li><a href="/logout">Logout</a></li>
-					<% } %>
-				</ul>
-			</div>
-		</div>
-	</nav>
 
-	<div class="container">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavLinks" aria-controls="mainNavLinks" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="mainNavLinks">
+					<div class="nav navbar-nav ml-auto">
+						<% if (!session) { %>
+							<a class="nav-item nav-link btn" id="loginBtn">Login</a>
+							<a class="nav-item nav-link btn" id="registerBtn">Sign up</a>
+						<% } else { %>
+							<span class="navbar-text"><%=session.username%>:</span>
+							<a class="nav-item nav-link" href="/logout">Logout</a>
+						<% } %>
+					</div>
+				</div>
+			</div>
+		</nav>
 
 	<% if (success.length>0) {%>
 		<div class="alert alert-success text-center" role="alert"><%=success%></div>
@@ -46,3 +37,6 @@
 	<% } if (error.length>0) {%>
 		<div class="alert alert-danger text-center" role="alert"><%=error%></div>
 	<% } %>
+
+<% include loginModal %>
+<% include registerModal %>
