--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,25 +1,30 @@
 <% include ./parts/header %>
-	<h1>Sign up</h1>
+	<section class="container py-4">
+		<h1 class="text-center">Sign up</h1>
 
-	<div class="row form">
-		<form action="/register" method="POST">
-			<div class="form-group">
-				<label for="username">Username: </label>
-				<input class="form-control" type="username" id="username" name="username">
+		<div class="row">
+			<div class="col-lg-4 offset-4">
+				<form action="/register" method="POST">
+					<div class="form-group">
+						<label for="username">Username: </label>
+						<input class="form-control" type="username" id="username" name="username">
+					</div>
+
+					<div class="form-group">
+						<label for="email">Email: </label>
+						<input class="form-control" type="email" id="email" name="email">
+					</div>
+
+					<div class="form-group">
+						<label for="password">Password: </label>
+						<input class="form-control" type="password" id="password" name="password">
+					</div>
+					<div class="text-center">
+						<button class="btn btn-primary" type="submit">Submit</button>
+						<a class="btn btn-outline-secondary" href="/camps">Cancel</a>
+					</div>
+				</form>
 			</div>
-
-			<div class="form-group">
-				<label for="email">Email: </label>
-				<input class="form-control" type="email" id="email" name="email">
-			</div>
-
-			<div class="form-group">
-				<label for="password">Password: </label>
-				<input class="form-control" type="password" id="password" name="password">
-			</div>
-
-			<button class="btn btn-primary btn-lg btn-block" type="submit">Submit</button>
-		</form>
-		<a href="/camps">Go back</a>
-	</div> <!-- row -->
+		</div> <!-- row -->
+	</section>
 <% include ./parts/footer %>
