--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -13,12 +13,19 @@
 		<div class="row mb-3">
 		   <div class="col d-flex mb-3 mb-lg-0 flex-column justify-content-between">
             <div>
-               <div class="form-group">
-                  <label for="title">Campground name:</label>
-                  <input class="form-control" type="text" id="title" name="camp[name]" value="<%=camp.name%>" placeholder="Campground name">
+               <div class="row">
+                  <div class="form-group col">
+                     <label for="title">Campground name:</label>
+                     <input class="form-control" type="text" id="title" name="camp[name]" value="<%=camp.name%>" placeholder="Campground name">
+                  </div>
+                  <div class="form-group col-4">
+                     <label for="image">$ Cost/night: </label>
+                     <input class="form-control" type="number" id="price" name="camp[cost]" step="0.1" min="0" value="<%= camp.cost.toFixed(2) %>" required>
+                  </div>
                </div>
+
                <div class="form-group">
-                     <label for="info">Description:</label>
+                  <label for="info">Description:</label>
                   <textarea class="form-control" id="info" name="camp[info]" rows="25"><%-camp.info%></textarea>
                </div>
             </div>
