--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,11 +4,17 @@
 	<div class="row">
 		<div class="col-lg-8 offset-2">
 			<form action="/camps" method="POST">
-				<div class="form-group">
-					<label for="title">Campground name: </label>
-					<input class="form-control" type="text" id="title" name="camp[name]">
-				</div>
+				<div class="form-row">
+					<div class="form-group col">
+						<label for="title">Campground name: </label>
+						<input class="form-control" type="text" id="title" name="camp[name]">
+					</div>
 
+					<div class="form-group col-4">
+						<label for="image">$ Cost/night: </label>
+						<input class="form-control" type="number" id="price" name="camp[cost]" step="0.01" min="0" value="50" required>
+					</div>
+				</div>
 				<div class="form-group">
 					<label for="image">Image URL: </label>
 					<input class="form-control" type="text" id="image" name="camp[image]">
