--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,8 +3,8 @@
 		<h1 class="text-center">Log in</h1>
 
 		<div class="row">
-			<div class="col-lg-4 offset-4">
-			<form action="/login" method="POST">
+			<div class="col d-flex justify-content-center">
+			<form style="width: 400px;" action="/login" method="POST">
 				<div class="form-group">
 					<label for="username">Username: </label>
 					<input class="form-control" type="username" id="username" name="username">
