--- a/views/parts/registerModal.ejs
+++ b/views/parts/registerModal.ejs
@@ -10,18 +10,18 @@
 				<div class="modal-body">
 					<form action="/register" method="POST">
 						<div class="form-group">
-							<label for="username">Username: </label>
-							<input class="form-control" type="username" id="username" name="username">
+							<label for="newusername">Username: </label>
+							<input class="form-control" type="username" id="newusername" name="username">
 						</div>
 					
 						<div class="form-group">
-							<label for="email">Email: </label>
-							<input class="form-control" type="email" id="email" name="email">
+							<label for="newemail">Email: </label>
+							<input class="form-control" type="newemail" id="email" name="email">
 						</div>
 					
 						<div class="form-group">
-							<label for="password">Password: </label>
-							<input class="form-control" type="password" id="password" name="password">
+							<label for="newpassword">Password: </label>
+							<input class="form-control" type="password" id="newpassword" name="password">
 						</div>
 						<div class="modal-footer">
 							<button class="btn btn-primary" type="submit">Submit</button>
