--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -20,8 +20,13 @@
                   </div>
                   <div class="form-group col-4">
                      <label for="image">$ Cost/night: </label>
-                     <input class="form-control" type="number" id="price" name="camp[cost]" step="0.1" min="0" value="<%= camp.cost.toFixed(2) %>" required>
+                     <input class="form-control" type="number" id="price" name="camp[cost]" step="0.01" min="0" value="<%= camp.cost.toFixed(2) %>" required>
                   </div>
+               </div>
+
+               <div class="form-group">
+                  <label for="location">Location: </label>
+                  <input class="form-control" type="text" id="location" name="location" value="<%= camp.map.address %>" placeholder="<%= camp.map.address %>">
                </div>
 
                <div class="form-group">
