--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -15,6 +15,12 @@
 						<input class="form-control" type="number" id="price" name="camp[cost]" step="0.01" min="0" value="50" required>
 					</div>
 				</div>
+
+				<div class="form-group">
+					<label for="location">Location: </label>
+					<input class="form-control" type="text" id="location" name="location" placeholder="Depotchem Amgal Ltd, Tnuva Street, Be'er Tuvia">
+				</div>
+
 				<div class="form-group">
 					<label for="image">Image URL: </label>
 					<input class="form-control" type="text" id="image" name="camp[image]">
