--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,6 +18,7 @@
          </div>
          <div class="col-lg-8 px-0">
             <img class="w-100" src="<%= camp.image %>">
+            <div id="map"></div>
          </div>
       </div>
 
@@ -47,4 +48,40 @@
       </div>
       
    </section>
+
+   <script>
+      var map;
+      function initMap() {
+         var lat = <%= camp.map.lat.toFixed(2) %>;
+         var lng = <%= camp.map.lng.toFixed(3) %>;
+         var center = {lat: lat, lng: lng};
+         map = new google.maps.Map(document.getElementById('map'), {
+            center: center,
+            zoom: 8,
+            
+         });
+
+         var contentString = `
+            <strong>
+               <%= camp.name %><br>
+               <%= camp.map.adresss %><br>
+               ` + lat +`, `+ lng +`
+            </strong>
+         `
+         var infoWindow = new google.maps.InfoWindow({
+            content: contentString
+         });
+
+         var marker = new google.maps.Marker({
+            position: center,
+            map: map
+         });
+
+         marker.addListener('dblclick', function(){
+            infoWindow.open(map, marker);
+         });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFUKFLf5QOFHVtIqFqU1KTfJzc2_xWJM0&callback=initMap" async defer></script>
+
 <% include ../parts/footer %>
