--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,11 +31,11 @@
          <% camp.comments.forEach(function(comment){ %>
             <div class="card bg-light mt-2">
                <div class="card-header d-flex justify-content-between p-2">
-                  <h5 class="">Posted by: <%=comment.author.username%></h5>
-                  <h6><%=comment.date.toDateString()%></h6>
+                  <h5 class="">Posted by: <%= comment.author.username %></h5>
+                  <h6><%= moment(comment.date).fromNow() %></h6>
                </div>
                <div class="card-body p-2">
-                  <p class="card-text"><%-comment.text%></p>
+                  <p class="card-text"><%- comment.text %></p>
                   <form action="/camps/<%=camp._id%>/comment/<%=comment._id%>?_method=DELETE" method="POST">
                      <% if (session && (session._id.equals(comment.author.id))){ %>
                         <a class="btn btn-primary btn-sm" href="/camps/<%=camp._id%>/comment/<%=comment._id%>/edit"><i class="fas fa-pen"></i></span></a>
@@ -57,8 +57,8 @@
          var center = {lat: lat, lng: lng};
          map = new google.maps.Map(document.getElementById('map'), {
             center: center,
-            zoom: 8,
-            
+            zoom: 15,
+            mapTypeControl: false,
          });
 
          var contentString = `
@@ -74,7 +74,7 @@
 
          var marker = new google.maps.Marker({
             position: center,
-            map: map
+            map: map,
          });
 
          marker.addListener('dblclick', function(){
