--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,8 +31,15 @@
          <% camp.comments.forEach(function(comment){ %>
             <div class="card bg-light mt-2">
                <div class="card-header d-flex justify-content-between p-2">
-                  <h5 class="">Posted by: <%= comment.author.username %></h5>
-                  <h6><%= moment(comment.date).fromNow() %></h6>
+                  <div>
+                     <h5 class="d-inline">Posted by: <%= comment.author.username %></h5>
+                     <% if (moment().diff(comment.date, 'days') < 1) { %>
+                        <small class="text-muted">
+                           (<%= moment(comment.date).fromNow(); %>)
+                        </small>
+                     <% } %>
+                  </div>
+                  <h6><%= moment(comment.date).format("DD[/]MM[/]YYYY HH[:]mm") %></h6>
                </div>
                <div class="card-body p-2">
                   <p class="card-text"><%- comment.text %></p>
@@ -52,8 +59,8 @@
    <script>
       var map;
       function initMap() {
-         var lat = <%= camp.map.lat.toFixed(2) %>;
-         var lng = <%= camp.map.lng.toFixed(3) %>;
+         var lat = <%= camp.map.lat %>;
+         var lng = <%= camp.map.lng %>;
          var center = {lat: lat, lng: lng};
          map = new google.maps.Map(document.getElementById('map'), {
             center: center,
