--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,14 +3,14 @@
       <h1 class="text-center"><%= camp.name %></h1>
       <div class="d-flex justify-content-between ">
          <h5 class="">$<%= camp.cost.toFixed(2) %>/night</h4>
-         <h6 class="m-0"><small>Submitted by <%=camp.author.username%></small></h6>
+         <h6 class="m-0"><small>Submitted by <a href="/profile/<%= camp.author.id %>"><%= camp.author.username %></a></small></h6>
       </div>
       <div class="row mb-3 mx-0 shadow">
          <div class="col d-flex mb-3 flex-column justify-content-between align-items-center">
             <p class="lead"><%- camp.info %></p>
             <form action="/camps/<%=camp._id%>?_method=DELETE" method="POST">
                <a class="btn btn-outline-secondary" href="/camps">Back</a>
-               <% if (session && (session._id.equals(camp.author.id))){ %>
+               <% if (session && (session.isAdmin || session._id.equals(camp.author.id))){ %>
                   <a class="btn btn-primary" href="/camps/<%=camp._id%>/edit">Edit</a>
                   <button type="submit" class="btn btn-danger">Delete</button>
                <% } %>
@@ -44,7 +44,7 @@
                <div class="card-body p-2">
                   <p class="card-text"><%- comment.text %></p>
                   <form action="/camps/<%=camp._id%>/comment/<%=comment._id%>?_method=DELETE" method="POST">
-                     <% if (session && (session._id.equals(comment.author.id))){ %>
+                     <% if (session && (session.isAdmin || session._id.equals(comment.author.id))){ %>
                         <a class="btn btn-primary btn-sm" href="/camps/<%=camp._id%>/comment/<%=comment._id%>/edit"><i class="fas fa-pen"></i></span></a>
                         <button type="submit" class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
                      <% } %>
