add password reset function

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <section class="container py-4">
 	<h1 class="text-center">Add new campground</h1>
 	<div class="row">
-		<div class="col-lg-8 offset-2">
+		<div class="col-lg-8 offset-lg-2">
 			<form action="/camps" method="POST">
 				<div class="form-row">
 					<div class="form-group col">
