--- a/views/parts/loginModal.ejs
+++ b/views/parts/loginModal.ejs
@@ -18,9 +18,12 @@
 							<label for="password">Password: </label>
 							<input class="form-control" type="password" id="password" name="password">
 						</div>
-						<div class="modal-footer">
-							<button class="btn btn-primary" type="Log in">Submit</button>
-							<a class="btn btn-outline-secondary" href="/camps">Back</a>
+						<div class="modal-footer justify-content-between">
+							<div>
+								<button type="submit" class="btn btn-primary">Log In</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Back</button>
+							</div>
+							<a href="/forgot" class="btn btn-link"><small>forgot password?</small></a>
 						</div>
 					</form>
 				</div>
