--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -3,14 +3,16 @@
 	<h1 class="text-center">New post</h1>
 
 	<div class="row">
-		<div class="col-lg-8 offset-2">
+		<div class="col-lg-8 offset-lg-2">
 			<form action="/camps/<%=camp._id%>/comment/" method="POST">
 				<div class="form-group">
 					<textarea class="form-control" id="content" name="text" rows="10"></textarea>
 				</div>
 
-				<button class="btn btn-primary" type="submit">Submit</button>
-				<a class="btn btn-outline-secondary" href="/camps/<%=camp._id%>">Go back</a>
+				<div class="text-center">
+					<button class="btn btn-primary" type="submit">Submit</button>
+					<a class="btn btn-outline-secondary" href="/camps/<%=camp._id%>">Go back</a>
+				</div>
 			</form>
 			
 		</div>
