--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,8 +15,9 @@
 					<input class="form-control" type="password" id="password" name="password">
 				</div>
 				<div class="text-center">
-					<button class="btn btn-primary" type="Log in">Log in</button>
+					<button class="btn btn-primary" type="submit">Log In</button>
 					<a class="btn btn-outline-secondary" href="/camps">Cancel</a>
+					<a href="/forgot" class="btn btn-link"><small>forgot password?</small></a>
 				</div>
 			</form>
 		</div>
