--- a/views/parts/registerModal.ejs
+++ b/views/parts/registerModal.ejs
@@ -25,7 +25,7 @@
 						</div>
 						<div class="modal-footer">
 							<button class="btn btn-primary" type="submit">Submit</button>
-							<a class="btn btn-outline-secondary" href="/camps">Cancel</a>
+							<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Back</button>
 						</div>
 					</form>
 				</div>
