--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -71,7 +71,7 @@
          var contentString = `
             <strong>
                <%= camp.name %><br>
-               <%= camp.map.adresss %><br>
+               <%= camp.map.address %><br>
                ` + lat +`, `+ lng +`
             </strong>
          `
