--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 	<h1 class="text-center">Add new campground</h1>
 	<div class="row">
 		<div class="col-lg-8 offset-lg-2">
-			<form action="/camps" method="POST">
+			<form action="/camps" method="POST" enctype="multipart/form-data">
 				<div class="form-row">
 					<div class="form-group col">
 						<label for="title">Campground name: </label>
@@ -22,10 +22,24 @@
 				</div>
 
 				<div class="form-group">
-					<label for="image">Image URL: </label>
-					<input class="form-control" type="text" id="image" name="camp[image]">
+					<div class="list-group flex-row" id="uploadTabs" role="tablist">
+						<a class="list-group-item list-group-item-light list-group-item-action active" href="#imgtab1" role="tab">Link Image</a>
+						<a class="list-group-item list-group-item-light list-group-item-action" href="#imgtab2" role="tab">Upload Image</a>
+					</div>
+						
+					<div class="tab-content border p-2">
+						<div class="tab-pane active" id="imgtab1" role="tabpanel">
+							<input class="form-control" type="text" name="camp[image]" placeholder="URL">
+						</div>
+						<div class="tab-pane" id="imgtab2" role="tabpanel">
+							<div class="custom-file">
+								<input type="file" class="custom-file-input" id="imageUpload" name="image" accept="image/*">
+								<label class="custom-file-label" for="imageUpload">Choose file</label>
+							</div>
+						</div>
+					</div>
 				</div>
-
+				
 				<div class="form-group">
 					<label for="info">Description: </label>
 					<textarea class="form-control" id="info" name="camp[info]" rows="10"></textarea>
